Removed trailer because too big

--- a/index.html
+++ b/index.html
@@ -529,10 +529,10 @@
                                     assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
                                     velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                 </p>
-                                <video width="640" height="480" controls>
-                                    <source src="assets/vid/ScrapyardScavengersTrailer.mp4" type="video/mp4">
-                                    Your browser doesn't like videos
-                                </video>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/cnX-EOUraUc"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                                 <!-- TODO: Stop video on close-->
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
